--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Angular-xeditable changelog
 Version 0.1.9 Feb 09, 2015
 ----------------------------
 [enh] Add validator attribute
+[enh] Add ui-select
 
 
 Version 0.1.8 Jan 10, 2014
